menubuttons alignement fix

--- a/public/css/smallscreenstyle.css
+++ b/public/css/smallscreenstyle.css
@@ -19,10 +19,10 @@
       display: inline-block;
       background-color: rgb(109, 108, 104);
       position: fixed;
-      border: 1px solid;
+      
       margin: 0px auto 31px auto;
       bottom: 0px;
-      left: 0px;
+      
       width: 100%;
       z-index: 99;
     }
@@ -30,14 +30,14 @@
       display: inline;
       background-color: rgb(109, 108, 104);
       color: #000;
-      width: 30%;
+      width: 31%;
       float: left;
       border: 2px solid;
       border-color: rgb(96, 95, 90);;
       text-align: center;
       padding-top: 10px;
       padding-bottom: 10px;
-      margin: 0px 5px;
+      margin: auto;
     }
     .menuitems a{
       text-decoration: none;
